Style: Add margin between stackFlightOptions & stackFlightRoute

--- a/src/pages/Home/BoxSearchFlight/BoxSearchFlight.module.scss
+++ b/src/pages/Home/BoxSearchFlight/BoxSearchFlight.module.scss
@@ -1,5 +1,9 @@
-.wrapper {
+.boxSearchFlightWrapper {
     border: 1px solid grey;
     padding: 1rem;
     margin-top: 2rem;
+}
+
+.stackFlightOptionsWrapper {
+    margin-bottom: 1.5rem;
 }
