--- a/src/pages/Home/BoxSearchFlight/DatePickerFlightDate.module.scss
+++ b/src/pages/Home/BoxSearchFlight/DatePickerFlightDate.module.scss
@@ -1,3 +1,8 @@
+.datePickerFlightDateWrapper {
+    margin-right: 1rem;
+}
+
 .datePickerFlightDate {
     margin-right: 1rem;
+    margin-top: 5rem;
 }
