--- a/src/pages/Home/BoxFlightResults/OnewayItemFlight.module.scss
+++ b/src/pages/Home/BoxFlightResults/OnewayItemFlight.module.scss
@@ -15,6 +15,11 @@
 .logoAndRouteWrapper {
     text-align: center;
     flex-basis: 1;
+
+    img {
+        max-width: 36px;
+        height: auto;
+    }
 }
 
 .carrierNameWrapper {
